--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="sidebar">
       <div class="sidebar-buttonField">
         <div class="sidebar-button">
+          <h2></h2>
           <a></a>
         </div>
         <div class="sidebar-button">
@@ -20,16 +21,118 @@
         </div>
       </div>
     </div>
+
     <div class="maket-form">
       <div class="background">
         <h1>BERN</h1>
       </div>
+
+      <div class="block"></div>
     </div>
     <div class="maket-form">
       <div class="background2">
-        <div class="info-box"></div>
+        <div class="container">
+          <div class="info-box">
+            <div class="text-holder">
+              <h2>Über Bern</h2>
+              <p>
+                Bern ist die Bundesstadt der Schweiz und zugleich die Hauptstadt
+                des gleichnamigen Kantons. Die Stadt liegt malerisch an einer
+                Schleife der Aare und besticht durch ihre gut erhaltene
+                Altstadt, die seit 1983 zum UNESCO-Weltkulturerbe gehört. Bern
+                wurde 1191 gegründet und entwickelte sich im Laufe der
+                Jahrhunderte zu einem politischen, kulturellen und
+                wirtschaftlichen Zentrum der Schweiz. Die Stadt kombiniert
+                historische Architektur mit modernen Elementen, wodurch sie eine
+                einzigartige Atmosphäre erhält. Die Altstadt ist geprägt von
+                mittelalterlichen Bauten, engen Gassen, historischen Brunnen und
+                Arkaden, die sich über mehrere Kilometer erstrecken. Die Stadt
+                bietet zahlreiche Plätze, Cafés und Restaurants, die sowohl
+                Einheimische als auch Touristen anziehen.
+              </p>
+            </div>
+          </div>
+
+          <div class="info-box">
+            <div class="text-holder">
+              <h2>Sehenswürdigkeiten</h2>
+              <p>
+                Bern hat eine Vielzahl an Sehenswürdigkeiten zu bieten. Das
+                Bundeshaus ist das politische Zentrum und beeindruckt durch
+                seine imposante Architektur. Der Zytglogge-Turm, ein
+                historischer Uhrturm, zieht mit seiner astronomischen Uhr und
+                den mechanischen Figuren zahlreiche Besucher an. Der
+                Münsterplatz mit dem Berner Münster bietet einen herrlichen
+                Ausblick über die Stadt und die umliegende Landschaft. Der
+                Bärenpark, in dem echte Braunbären leben, ist sowohl bei
+                Familien als auch bei Touristen sehr beliebt. Die Lauben, die
+                überdachten Arkadengänge der Altstadt, laden zum Bummeln,
+                Einkaufen und Verweilen ein. Daneben gibt es zahlreiche Museen,
+                wie das Historische Museum Bern, das Kunstmuseum oder das
+                Zentrum Paul Klee, die Kultur und Geschichte der Region
+                eindrucksvoll präsentieren.
+              </p>
+            </div>
+          </div>
+
+          <div class="info-box">
+            <div class="text-holder">
+              <h2>Kultur und Leben</h2>
+              <p>
+                Bern ist bekannt für seine ruhige und angenehme Lebensart. Die
+                Mischung aus Tradition und Moderne macht die Stadt besonders
+                attraktiv. Es gibt zahlreiche kulturelle Veranstaltungen,
+                Festivals und Konzerte, die das ganze Jahr über stattfinden. Das
+                Theater, die Oper und verschiedene Musikfestivals ziehen
+                Besucher aus dem In- und Ausland an. Die Stadt bietet ein
+                reichhaltiges gastronomisches Angebot, von traditionellen
+                Schweizer Gerichten bis hin zu internationaler Küche. Auch die
+                studentische Szene und junge Kreative prägen das Stadtbild und
+                tragen zu einem lebendigen kulturellen Leben bei. Die vielen
+                Grünflächen und Parks laden zur Erholung ein, und die Stadt ist
+                sehr fahrradfreundlich, wodurch man sie bequem erkunden kann.
+              </p>
+            </div>
+          </div>
+
+          <div class="info-box">
+            <div class="text-holder">
+              <h2>Natur und Umgebung</h2>
+              <p>
+                Die Umgebung von Bern bietet zahlreiche Möglichkeiten für Natur-
+                und Outdoor-Aktivitäten. Die Aare fließt malerisch durch die
+                Stadt und lädt im Sommer zum Schwimmen, Paddeln oder Spazieren
+                ein. In kurzer Zeit erreicht man die Alpen, wo Wandern,
+                Skifahren und Mountainbiking möglich sind. Der Gurten, ein
+                Hausberg von Bern, bietet einen tollen Ausblick auf die Stadt
+                und die umliegende Landschaft. Die Region zeichnet sich durch
+                grüne Wiesen, Wälder und zahlreiche Seen aus, die sowohl für
+                Entspannung als auch für sportliche Aktivitäten genutzt werden
+                können. Bern ist somit ideal gelegen, um Stadtleben und Natur
+                perfekt zu kombinieren, sei es für Einheimische oder für
+                Besucher, die die Schweiz kennenlernen möchten.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <div class="block"></div>
+
+    <div class="block-of-4">
+      <div class="ground">
+        <img class="ground-img" src="images/bg2.png" alt="" />
+      </div>
+      <div class="ground">
+        <img class="ground-img" src="images/bg2.png" alt="" />
+      </div>
+      <div class="ground">
+        <img class="ground-img" src="images/bg2.png" alt="" />
+      </div>
+      <div class="ground">
+        <img class="ground-img" src="images/bg2.png" alt="" />
+      </div>
+    </div>
   </body>
 </html>
