--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div class="sidebar-button"></div>
         <div class="sidebar-button"></div> -->
 
-        <div class="link-button"><a href="#slide-1">Zhyrair</a></div>
-        <div class="link-button"><a href="#slide-2">Illa</a></div>
-        <div class="link-button"><a href="#slide-3">Vika</a></div>
+        <div class="link-button"><a href="#slide-1">Main</a></div>
+        <div class="link-button"><a href="#slide-2">Geografie</a></div>
+        <div class="link-button"><a href="#slide-3">Wirtschaft</a></div>
+        <div class="link-button"><a href="#slide-4">Bevölkerung</a></div>
       </div>
     </div>
 
@@ -147,7 +148,7 @@ Neben der Bahn spielt das Postauto eine zentrale Rolle – sowohl bei der Ersc
 
           
  <div>
-     <div class="block-of-4" id="slide-3">
+     <div class="block-of-4" id="slide-4">
       <div class="ground">
         <img class="ground-img" src="images/bg2.png" alt="" />
         <div class="text-holeder">
