--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Der Grosse Rat verabschiedete im März 2021 in zweiter Lesung mit 98 zu 44 Stimm
  <div>
      <div class="block-of-4" id="slide-3">
       <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Wirtschaftsstandort.jpg" alt="" />
         <div class="text-holeder">
           <h2>Wirtschaftsstandort und -struktur</h2>
           <p>
@@ -102,7 +102,7 @@ Der grösste Arbeitgeber im Kanton ist mit 28'207 Vollzeitstellen der Kanton Ber
         <img />
       </div>
       <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Clusterorganisationen.jpeg" alt="" />
         <div class="text-holeder">
           <h2>Clusterorganisationen</h2>
           <p>
@@ -117,7 +117,7 @@ Design
         </div>
         <img />
       </div>      <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Tourismus.jpg" alt="" />
         <div class="text-holeder">
           <h2>Tourismus</h2>
           <p>
@@ -128,7 +128,7 @@ Seit Juni 2011 sind zudem die Pfahlbauten am Bieler- und am Lobsigensee Teil
         </div>
         <img />
       </div>      <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Verkehr.jpg" alt="" />
         <div class="text-holeder">
           <h2>Verkehr</h2>
           <p>
@@ -149,7 +149,7 @@ Neben der Bahn spielt das Postauto eine zentrale Rolle – sowohl bei der Ersc
  <div>
      <div class="block-of-4" id="slide-3">
       <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/demografia.jpg" alt="" />
         <div class="text-holeder">
           <h2>Demografie</h2>
           <p>
@@ -160,7 +160,7 @@ Auch auf dem Arbeitsmarkt zeigt sich eine positive Situation: Am 30. Juni 2021 l
         <img />
       </div>
       <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Sprache.jpg" alt="" />
         <div class="text-holeder">
           <h2>Sprachen</h2>
           <p>Die Hauptsprache der Bevölkerung ist zu 86 Prozent Deutsch, zu 11 Prozent Französisch, zu 3 Prozent Italienisch und zu 3 Prozent Englisch sowie zu je rund ein bis zwei Prozent Portugiesisch, Serbisch und Kroatisch, Albanisch, Spanisch und Türkisch. Die deutschsprachige Bevölkerung spricht in der Regel Berndeutsch, die regionale Varietät des Schweizerdeutschen.
@@ -177,7 +177,7 @@ der Conseil des affaires francophones für Biel/Bienne und Evilard.
         </div>
         <img />
       </div>      <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Geschichte.jpeg" alt="" />
         <div class="text-holeder">
           <h2>Geschichte</h2>
           <p>
@@ -187,7 +187,7 @@ Bern verbündete sich 1353 mit den Waldstätten Uri, Schwyz und Unterwalden.
         </div>
         <img />
       </div>      <div class="ground">
-        <img class="ground-img" src="images/bg2.png" alt="" />
+        <img class="ground-img" src="images/Verwaltungsgliederung.jpeg" alt="" />
         <div class="text-holeder">
           <h2>Verwaltungsgliederung</h2>
           <p>
