--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div class="sidebar-button"></div>
         <div class="sidebar-button"></div> -->
 
-        <div class="link-button"><a href="#slide-1">Zhyrair</a></div>
-        <div class="link-button"><a href="#slide-2">Illa</a></div>
-        <div class="link-button"><a href="#slide-3">Vika</a></div>
+        <div class="link-button"><a href="#slide-1">Main</a></div>
+        <div class="link-button"><a href="#slide-2">Kantons Geografie</a></div>
+        <div class="link-button"><a href="#slide-3">Economics</a></div>
+        <div class="link-button"><a href="#slide-4">Kultur</a></div>
       </div>
     </div>
 
