--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="link-button"><a href="#slide-1">Main</a></div>
         <div class="link-button"><a href="#slide-2">Kantons Geografie</a></div>
         <div class="link-button"><a href="#slide-3">Economics</a></div>
-        <div class="link-button"><a href="#slide-4">Kultur</a></div>
+        <div class="link-button"><a href="#slide-4">Kulture</a></div>
       </div>
     </div>
 
@@ -25,7 +25,7 @@
     </div>
 
     <div class="maket-form">
-      <div class="background" id="slide-1">
+      <div class="background2" id="slide-1">
         <div class="box">
           <h1>BERN</h1>
         </div>
