--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Auch auf dem Arbeitsmarkt zeigt sich eine positive Situation: Am 30. Juni 2021 l
         <img />
       </div>
       <div class="ground">
-        <img class="ground-img" src="images/Sprache.jpg" alt="" />
+        <img class="ground-img" src="images/sprache_vlach_c_adobestock.webp" alt="" />
         <div class="text-holeder">
           <h2>Sprachen</h2>
           <p>Die Hauptsprache der Bevölkerung ist zu 86 Prozent Deutsch, zu 11 Prozent Französisch, zu 3 Prozent Italienisch und zu 3 Prozent Englisch sowie zu je rund ein bis zwei Prozent Portugiesisch, Serbisch und Kroatisch, Albanisch, Spanisch und Türkisch. Die deutschsprachige Bevölkerung spricht in der Regel Berndeutsch, die regionale Varietät des Schweizerdeutschen.
