--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <div class="link-button"><a href="#slide-2">Kantons Geografie</a></div>
         <div class="link-button"><a href="#slide-3">Economics</a></div>
         <div class="link-button"><a href="#slide-4">Kulture</a></div>
-      </div>
+
+        <div class="last-btn">
+            <div class="link-button" ><a href="index.html">DE</a></div>
+            <div class="link-button" ><a href="indexFR.html">FR</a></div>
+</div>   </div>
     </div>
 
     <div class="side-line">
@@ -148,7 +152,7 @@ Neben der Bahn spielt das Postauto eine zentrale Rolle – sowohl bei der Ersc
 
           
  <div>
-     <div class="block-of-4" id="slide-3">
+     <div class="block-of-4" id="slide-4">
       <div class="ground">
         <img class="ground-img" src="images/demografia.jpg" alt="" />
         <div class="text-holeder">
